[package]
name = "moq-subrepub"
description = "Media over QUIC - Subscribe and Republish"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[dependencies]
moq-transport = { path = "../moq-transport", version = "0.5" }
moq-native = { path = "../moq-native", version = "0.3" }
url = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.11"
mp4 = "0.14"
anyhow = { version = "1", features = ["backtrace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
